--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,8 @@
 <label for="email">E-mail</label>
 <input type="text" id="email" #email>
 <button (click)="onSubmit(username.value, email.value)">Submit</button>
+<hr>
+<button (click)="onGetData()">Get Data</button>
+<ul>
+  <li *ngFor="let item of items">{{item}}</li>
+</ul>
