--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,5 @@
 <hr>
 <button (click)="onGetData()">Get Data</button>
 <ul>
-  <li *ngFor="let item of items">{{item}}</li>
+  <li *ngFor="let item of items">{{item.username}}</li>
 </ul>
